Fix: remove CORS validation for admin