@@ -22,7 +22,6 @@ import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -44,22 +43,11 @@ public class SecurityConfig {
                     config.setAllowedOriginPatterns(List.of(
                             "http://localhost:3000",
                             "https://*.vercel.app",
-                            "https://*.railway.app",
-                            "https://pintu-sewa-admin.up.railway.app"
+                            "https://*.railway.app"
                     ));
                     config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-//                    config.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
-//                    config.setExposedHeaders(List.of("Authorization"));
-                    config.setAllowedHeaders(Arrays.asList("*"));
-                    config.setExposedHeaders(Arrays.asList(
-                            "Authorization",
-                            "Content-Type",
-                            "X-Requested-With",
-                            "Accept",
-                            "Origin",
-                            "Access-Control-Request-Method",
-                            "Access-Control-Request-Headers"
-                    ));
+                    config.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+                    config.setExposedHeaders(List.of("Authorization"));
                     config.setAllowCredentials(true);
                     return config;
                 }))
